trunk/Archive2/14/a759868ea02e34/output
main.cpp:12:46: error: no viable conversion from 'std::make_index_sequence<3UL>' (aka 'std::__1::integer_sequence<unsigned long, 0, 1, 2>') to 'std::index_sequence<>' (aka 'std::__1::integer_sequence<unsigned long>')
    operator () (std::index_sequence< i... > = std::make_index_sequence< M >{}) const
                                             ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:40:19: note: in instantiation of default function argument expression for 'operator()<>' required here
    test< 3, 3 >{}(); // hard error
                  ^
/usr/include/c++/v1/utility:672:30: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'std::make_index_sequence<3UL>' (aka 'std::__1::integer_sequence<unsigned long, 0, 1, 2>') to 'const std::__1::integer_sequence<unsigned long> &' for 1st argument
struct _LIBCPP_TYPE_VIS_ONLY integer_sequence
                             ^
/usr/include/c++/v1/utility:672:30: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'std::make_index_sequence<3UL>' (aka 'std::__1::integer_sequence<unsigned long, 0, 1, 2>') to 'std::__1::integer_sequence<unsigned long> &&' for 1st argument
struct _LIBCPP_TYPE_VIS_ONLY integer_sequence
                             ^
main.cpp:12:46: note: passing argument to parameter here
    operator () (std::index_sequence< i... > = std::make_index_sequence< M >{}) const
                                             ^
1 error generated.
